--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/auth/login.js"></script>
-    <link rel="stylesheet" href="./main.css">
-    <title>Login</title>
-</head>
+<%- include('partials/header.ejs') %>
 <body>
-
     <div id="container">
     <form action="/validaUsuario" method="post" id="loginE">
         <div id="login">
@@ -31,4 +22,5 @@
     </form>
     </div>
 </body>
+<%- include('partials/footer.ejs') %>
 </html>
