--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/auth/login.js"></script>
+    
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./main.css">
-    <link rel="stylesheet" href="/public/bootstrap-5.3.6-dist/css/bootstrap.min.css">
     <title>Login</title>
 </head>
 
