--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 <body>
     <div id="container">
-    <form action="/validaUsuario" method="post" id="loginE">
+    <form action="/validaUsuario" method="post" id="loginE" class="formL">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
             <input type="email" name="email" id="" placeholder="Digite seu e-mail"><br>
@@ -10,7 +10,7 @@
             <button type="button" onclick="mudaLogin()">Criar Conta</button>
         </div>
     </form>
-    <form action="/criarUsuario" method="post" id="criaLogin" onsubmit="return verificaSenha()">
+    <form action="/criarUsuario" method="post" id="criaLogin" class="formL" onsubmit="return verificaSenha()">
         <div id="login">
             <img src="./img/imagem_2025-05-11_183426377-removebg-preview.png" alt="">
             <input type="text" name="usuarioN" id="criaUsuario" placeholder="Digite seu nome de usuario" required><br>
